<resources>
    <string name="app_name">My Friend</string>
    <string name="name_hint">Name</string>
    <string name="tv_name">M. Khafidhin Mufti Ali</string>
    <string name="school_hint">School</string>
    <string name="tv_school">SMK Syafii Akrom Kota Pekalongan</string>
    <string name="bio_hint">Bio</string>
    <string name="tv_bio">Inna Aamalu binniyat</string>
    <string name="des_btn_camera">Tombol Kamera</string>
    <string name="des_btn_save">Tombol Kamera</string>
    <string name="add_friend">Add Friend</string>
    <string name="des_btn_back">Tombol Kembali</string>
    <string name="des_photo">Foto Teman</string>
    <string name="edit_friend">Edit Friend</string>
    <string name="home_image">Home Image</string>
    <string name="let_s_be_friend">Let\'s be friend</string>
    <string name="description">Industrial class not only develop hard skills and soft skills, but we also help develop life sklills acording to your competence.</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="detail_friend">Detail Friend</string>
    <string name="image_friend">Image Friend</string>
    <string name="name">Name</string>
    <string name="button_edit">Button Edit</string>
    <string name="button_delete">Button Delete</string>
    <string name="name_1">Syarif Fakih Hudin</string>
    <string name="sekolah_1">SMK Nurul Umah</string>
    <string name="foto_1">foto</string>
    <string name="search">Search</string>
    <string name="profile_image">Profile Image</string>
    <string name="insert_photo">Insert Photo</string>
    <string name="from_camera">From Camera</string>
    <string name="pick_gallery">Pick Gallery</string>
    <string name="no_data_icon_desc">no_data_icon_desc</string>
    <string name="no_data_found">No Data Found</string>
    <string name="sorting_products">Sorting Products</string>
    <string name="title">Title</string>
    <string name="descriptionshorting">Description</string>
    <string name="order_products">Order Products</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="simpan">Simpan</string>
    <string name="filter_products">Filter Products</string>
    <string name="tops">Tops</string>
    <string name="vehicle">Vehicle</string>
    <string name="laptops">Laptops</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="button_sort">Button Sort</string>
    <string name="button_filter">Button Filter</string>
    <string name="show_notification">Show Notification</string>
    <string name="request_notification">Request Notification</string>
    <string name="lbl_permission_notification">Aktifkan notifika Anda untuk dapat melihat notifikasi!</string>
    <string name="lbl_setting">Setting</string>
    <string name="_0">0</string>
    <string name="show_in_app_notification">Show In App Notification</string>
    <string name="input_countdown_in_second">Input countdown in second</string>
</resources>