<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_products"
        android:textAlignment="center"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp">

        <RadioButton
            android:id="@+id/filter_tops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tops" />

        <RadioButton
            android:id="@+id/filter_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle" />

        <RadioButton
            android:id="@+id/filter_laptops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laptops" />

        <RadioButton
            android:id="@+id/filter_motorcycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motorcycle" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/simpan" />

</LinearLayout>