<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".work_manager.WorkManagerActivity">

        <TextView
            android:id="@+id/tv_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="@dimen/_50sdp"
            app:layout_constraintBottom_toTopOf="@+id/et_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_count"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_10sdp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:hint="@string/input_countdown_in_second"
            app:layout_constraintBottom_toTopOf="@+id/btn_in_app_notification" />


        <Button
            android:id="@+id/btn_in_app_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/show_in_app_notification"
            app:layout_constraintBottom_toTopOf="@+id/btn_request" />

        <Button
            android:id="@+id/btn_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/show_notification"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btn_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/request_notification"
            app:layout_constraintBottom_toTopOf="@id/btn_show" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

