<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFriendActivity"
    android:orientation="vertical">

    <!-- Root LinearLayout inside ScrollView -->
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Toolbar-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar">

            <ImageView
                android:id="@+id/backButton"
                style="@style/backButton"
                android:contentDescription="@string/des_btn_back"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/tittleToolbar"
                android:text="@string/detail_friend" />

            <ImageView
                android:id="@+id/deleteButton"
                style="@style/iconToolbar"
                android:contentDescription="@string/button_edit"
                android:src="@drawable/ic_delete"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageView
                android:id="@+id/editButton"
                style="@style/iconToolbar"
                android:contentDescription="@string/button_delete"
                android:src="@drawable/ic_edit"
                tools:ignore="RedundantDescriptionCheck" />
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_360sdp"
            android:contentDescription="@string/image_friend"
            android:src="@drawable/ic_profile_placeholder" />

        <TextView
            style="@style/textTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_hint"
            android:textSize="@dimen/_12ssp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp" />

        <!--TextView for displaying the name-->
        <TextView
            android:id="@+id/tv_name"
            style="@style/displayTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:drawableStartCompat="@drawable/ic_person"
            android:drawablePadding="@dimen/_8sdp" />

        <TextView
            style="@style/textTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_hint"
            android:textSize="@dimen/_12ssp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp" />

        <!--TextView for displaying the school-->
        <TextView
            android:id="@+id/tv_school"
            style="@style/displayTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawablePadding="@dimen/_8sdp"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/ic_school" />

        <TextView
            style="@style/textTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio_hint"
            android:textSize="@dimen/_12ssp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp" />

        <!--TextView for displaying bio-->
        <TextView
            android:id="@+id/tv_bio"
            style="@style/displayTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:drawableStartCompat="@drawable/ic_info"
            android:drawablePadding="@dimen/_8sdp" />

    </LinearLayout>
</ScrollView>
