<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:backgroundTint="@android:color/transparent"
    android:background="@drawable/rounded_dialog_background">

    <TextView
        android:id="@+id/title"
        style="@style/textTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_photo"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/from_camera"
        style="@style/textTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_camera"
        android:textSize="@dimen/_12ssp"
        android:paddingVertical="@dimen/_8sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/pick_gallery"
        style="@style/textTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_gallery"
        android:textSize="@dimen/_12ssp"
        android:paddingVertical="@dimen/_8sdp" />
</LinearLayout>
