<layout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_14sdp">

            <EditText
                android:id="@+id/search_bar"
                style="@style/searchTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="text"
                android:background="@drawable/bg_search"
                android:drawableEnd="@drawable/ic_search"
                android:hint="@string/search"
                android:inputType="text"
                android:minHeight="@dimen/_38sdp"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_12sdp"
                android:padding="@dimen/_2sdp"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                tools:listitem="@layout/activity_item_friend" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/no_data_layout"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iconNoData"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_search_off"
                android:contentDescription="@string/no_data_icon_desc" />

            <TextView
                android:id="@+id/tvNoData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data_found"
                android:textSize="@dimen/_16sdp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/black" />

        </LinearLayout>

        <!-- LinearLayout yang berada di bawah -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:padding="@dimen/_16sdp"
            android:gravity="end">

            <ImageButton
                android:id="@+id/btnSort"
                style="@style/btnAddTheme"
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/ic_button_add"
                android:contentDescription="@string/button_sort"
                android:src="@drawable/ic_sort" />

            <ImageButton
                android:id="@+id/btnFilter"
                style="@style/btnAddTheme"
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:background="@drawable/ic_button_add"
                android:contentDescription="@string/button_filter"
                android:src="@drawable/ic_filter" />

        </LinearLayout>

    </FrameLayout>

</layout>